test/negative/201_if_branches_differ.fx
// expect: branches
val a = if true {1} else {"s"}
println(a)
