test/negative/201_if_branches_differ.err
201_if_branches_differ.fx:2:26: error: if() expression should have the same type as its branches
 2 | val a = if true {1} else {"s"}
   |                          ^~~~

1 errors occured during type checking.
